moved mountain img down

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <img class="one-cloud" src="images/cloud.png" alt="cloud-img">
       <img class="two-cloud" src="images/cloud.png" alt="cloud-img">
-      <img src="images/mountain.png" alt="mountain-img">
+      <img class="mountain-img" src="images/mountain.png" alt="mountain-img">
     </div>
 
     <hr>
