--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <div class="top-container">
       <div class="text-top">
         <h1 class="name">I'm Alan</h1>
-        <!--Spans are a way to break the block items such as <p> and <h1> -->
         <h2 class="text-top"><span class="father">Father</span>, <span class="programmer">Pro</span>grammer,
           <span class="gamer">Gamer</span></h2>
       </div>
@@ -26,7 +25,7 @@
       <div class="profile">
         <img class="profile-pic"src="images/Profile Pic.jpeg" alt="profile-pic">
         <h2>Hello.</h2>
-        <p class="bio">I'm a Jr. Web Developer new to the field. I love programming, coffee and riding my motorcycle.</p>
+        <p class="bio">I'm a Web Developer residing in Colorado Springs. I love programming, too much coffee and playing video games.</p>
       </div>
       <hr>
       <div class="skills">
@@ -34,12 +33,15 @@
         <div class="skill-row">
           <img class="coding-img" src="images/computer science img.jpeg" alt="computer-science-img">
           <h3 class="web-dev">Web Development Arsenal</h3>
-          <p class="web-dev">HTML5, CSS, JS, Bootstrap4, jQuery, Node.js, git, EJS.</p>
+          <p class="web-dev">
+            ASP.NET, C#, MVC, EntityFramework, SQL, Visual Studio,
+            HTML5, CSS3, JavaScript, Bootstrap4, jQuery, and I'm always learning.
+          </p>
         </div>
         <div class="skill-row">
           <img class="gaming-img" src="images/gaming.jpeg" alt="gaming-img">
           <h3>Gaming</h3>
-          <p>League of Legends, Path of Exile, World of Warcraft, and other random games streaming on twitch.</p>
+          <p>World of Warcraft (retail and classic), Team Fight Tactice (TFT), and other random games streaming on twitch occasionally.</p>
         </div>
       </div>
 
@@ -49,7 +51,7 @@
         <h2>Get In Touch</h2>
         <h3>Programmer, Gamer, Coffee Lover?</h3>
         <p class="contact-msg">Reach out if you think we could be friends. Probably could be.</p>
-        <a class="button" href="mailto:alan.developer.ramsey@gmail.com">CONTACT ME</a>
+        <a class="button" href="mailto:alan.developer.ramsey@gmail.com">Email</a>
       </div>
     </div>
 
@@ -57,8 +59,9 @@
         <a class="footer-link" href="https://www.linkedin.com/in/alan-d-ramsey/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/Redmezz">Twitter</a>
         <a class="footer-link" href="https://twitch.tv/Redmezz">Twitch</a>
-        <a class="footer-link" href="https://www.youtube.com/channel/UCQd5RxBpkuGANve90xDlykQ?view_as=subscriber">YouTube</a>
-      <p class="copyright">© 2020 Alan Ramsey</p>
+        <a class="footer-link" href="https://github.com/redmezz">GitHub</a>
+        <!-- <a class="footer-link" href="https://www.youtube.com/channel/UCQd5RxBpkuGANve90xDlykQ?view_as=subscriber">YouTube</a> -->
+      <p class="copyright">© 2021 Alan Ramsey</p>
     </div>
   </body>
 </html>
