--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="skill-row">
           <img class="gaming-img" src="images/gaming.jpeg" alt="gaming-img">
           <h3>Gaming</h3>
-          <p>World of Warcraft (retail and classic), Team Fight Tactice (TFT), and other random games streaming on twitch occasionally.</p>
+          <p>World of Warcraft (retail and classic), Team Fight Tactics (TFT), and other random games streaming on twitch occasionally.</p>
         </div>
       </div>
 
