added phone number

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
 
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>Programmer, Gamer, Coffee Lover?</h3>
-        <p class="contact-msg">Reach out if you think we could be friends. Probably could be.</p>
+        <h3>Programmer, Gamer, Coffee Lover, Employer?</h3>
+        <p class="contact-msg">Reach out for hiring opportunities and/or friendship.</p>
+        <a class="button">(513) 609-2024</a>
         <a class="button" href="mailto:alan.developer.ramsey@gmail.com">Email</a>
       </div>
     </div>
