edited contact me section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>Programmer, Gamer, Coffee Lover, Employer?</h3>
+        <h3>Employer? Fellow Programmer? Coffee Lover?</h3>
         <p class="contact-msg">Reach out for hiring opportunities and/or friendship.</p>
         <a class="button">(513) 609-2024</a>
         <a class="button" href="mailto:alan.developer.ramsey@gmail.com">Email</a>
